# serpentlua-modify

./: .gitignore  CMakeLists.txt  README.md  lindings.bro  plugin.slm  serpentlua.rc
.github/workflows/: build.yml
codegen/: CMakeLists.txt
codegen/src/: main.cpp
include/: globals.hpp
include/yellowcat98.modify/: Modify.hpp  globals.hpp  stuff.hpp  utils.hpp
src/: main.cpp  utils.cpp
